--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
+    "formik": "^1.5.0",
     "node-sass": "^4.11.0",
     "prop-types": "^15.6.2",
     "react": "^16.8.1",
@@ -14,7 +15,8 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "yup": "^0.26.10"
   },
   "scripts": {
     "start": "react-scripts start",
