--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
     "formik": "^1.5.0",
+    "jsonwebtoken": "^8.4.0",
     "node-sass": "^4.11.0",
     "prop-types": "^15.6.2",
     "react": "^16.8.1",
@@ -13,7 +14,7 @@
     "react-dom": "^16.8.1",
     "react-icons": "^3.3.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.5",
     "yup": "^0.26.10"
   },
   "scripts": {
