--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
     "formik": "^1.5.0",
+    "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "prop-types": "^15.6.2",
     "react": "^16.8.1",
